data/derived/comb/progs/unify/prog3528.ml.out
Characters 109-124:
  List.split  ((let (one,two) = a in (x::one,y::two)))
                                     ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list
